Page log and android unhandled exception. (plus navigation example)

--- a/ContribSentry.Sample/ContribSentry.Sample/MainPage.xaml
+++ b/ContribSentry.Sample/ContribSentry.Sample/MainPage.xaml
@@ -19,7 +19,7 @@
                 </FormattedString>
             </Label.FormattedText>
         </Label>
-        <Label Text="{Binding WrongBinding}"/>
+        <Button Text="Disco" Clicked="Disco_Clicked"/>
     </StackLayout>
 
 </ContentPage>
