--- a/Samples/Sentry.Xamarin.Sample/MainPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/MainPage.xaml
@@ -20,6 +20,7 @@
             </Label.FormattedText>
         </Label>
         <Button Text="Disco" Clicked="Disco_Clicked"/>
+        <Button Text="Popup" Clicked="Popup_Clicked"/>
     </StackLayout>
 
 </ContentPage>
