--- a/Samples/Sentry.Xamarin.Sample/Views/About2PopupPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/About2PopupPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
              xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
-             x:Class="Sentry.Xamarin.Sample.Views.PopupPage">
+             x:Class="Sentry.Xamarin.Sample.Views.About2PopupPage">
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation 
             PositionIn="Center"
@@ -16,11 +16,9 @@
             EasingOut="SinIn"
             HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
-    <ContentPage.Content>
-        <StackLayout Background="Red" HeightRequest="300" WidthRequest="200">
-            <Label Text="Popup sample!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+    <StackLayout Background="White" Margin="50">
+        <Label Text="Popup sample 2!"
+            VerticalOptions="CenterAndExpand" 
+            HorizontalOptions="CenterAndExpand" />
+    </StackLayout>
 </pages:PopupPage>
