--- a/Samples/Sentry.Xamarin.Sample/Disco.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Disco.xaml
@@ -6,8 +6,11 @@
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                HorizontalOptions="CenterAndExpand"/>
             <Label Text="{Binding DiscoMissingBind}"/>
+            <Button Text="Capture Message" Clicked="CaptureMessageClick"/>
+            <Button Text="Handle Exception" Clicked="CaptureHandledClick"/>
+            <Button Text="Unhandled Exception" Clicked="CaptureUnhandledClick"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
