--- a/Samples/Sentry.Xamarin.Sample/MainPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/MainPage.xaml
@@ -21,6 +21,7 @@
         </Label>
         <Button Text="Disco" Clicked="Disco_Clicked"/>
         <Button Text="Popup" Clicked="Popup_Clicked"/>
+        <Button Text="Xaml Broken" Clicked="Xaml_Clicked"/>
     </StackLayout>
 
 </ContentPage>
