--- a/Samples/Sentry.Xamarin.Sample/Views/Popups/PaymentPopupPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/Popups/PaymentPopupPage.xaml
@@ -3,11 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
              xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
-             x:Class="Sentry.Xamarin.Sample.Views.AboutPopupPage">
+             x:Class="Sentry.Xamarin.Sample.Views.Popups.PaymentPopupPage">
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation 
-            PositionIn="Center"
-            PositionOut="Center"
+            PositionIn="Bottom"
+            PositionOut="Bottom"
             ScaleIn="1.2"
             ScaleOut="0.8"
             DurationIn="400"
@@ -16,10 +16,18 @@
             EasingOut="SinIn"
             HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
-    <StackLayout Background="White" Margin="50">
-        <Label Text="Popup sample!"
-            VerticalOptions="CenterAndExpand" 
-            HorizontalOptions="CenterAndExpand" />
-        <Button Text="Popup" Clicked="Popup_Clicked"/>
+    <StackLayout Background="White" 
+                 VerticalOptions="End"
+                 >
+        <Label FontSize="Title"
+               FontAttributes="Bold"
+               Margin="10, 50, 0, 100">
+            <Label.FormattedText>
+                <FormattedString>
+                    <Span Text="Fictional payment approved."/>
+                    <Span Text="    ✔" TextColor="#0ED40E"/>
+                </FormattedString>
+            </Label.FormattedText>
+        </Label>
     </StackLayout>
 </pages:PopupPage>
