--- a/Samples/Sentry.Xamarin.Sample/XamlPageWithIssue.xaml
+++ b/Samples/Sentry.Xamarin.Sample/XamlPageWithIssue.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ContribSentry.Sample.XamlPageWithIssue">
+             x:Class="ContribSentry.Sample.XamlPageWithIssue"
+             Title="Broken View">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
