--- a/Samples/Sentry.Xamarin.Sample/Views/Popups/UserFeedbackPopupPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/Popups/UserFeedbackPopupPage.xaml
@@ -2,8 +2,13 @@
 <pages:PopupPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup" 
-             xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+             xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup" 
+             xmlns:popups="clr-namespace:Sentry.Xamarin.Sample.ViewModels.Popups"
+             xmlns:Behaviors="clr-namespace:Sentry.Xamarin.Sample.Behaviors"
              x:Class="Sentry.Xamarin.Sample.Views.Popups.UserFeedbackPopupPage">
+    <pages:PopupPage.BindingContext>
+        <popups:UserFeedbackPopupPageViewModel/>
+    </pages:PopupPage.BindingContext>
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation 
             PositionIn="Bottom"
@@ -16,6 +21,17 @@
             EasingOut="SinIn"
             HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
+    <pages:PopupPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="EmailStyle"
+                   TargetType="Entry">
+                <Setter Property="Behaviors:LineColorBehavior.ApplyLineColor"
+                        Value="True"/>
+                <Setter Property="Behaviors:LineColorBehavior.LineColor"
+                        Value="Black"/>
+            </Style>
+        </ResourceDictionary>
+    </pages:PopupPage.Resources>
     <pages:PopupPage.Content>
         <Frame CornerRadius="20"
                Margin="50"
@@ -42,18 +58,35 @@
                         <Label Text="Whoops, a buggy bug was spotted!"/>
                         <Entry Placeholder="Name"/>
                         <Entry Placeholder="Email" 
+                               Text="{Binding Email.Value, Mode=TwoWay}"
                                x:Name="EmailEntry">
+                            <Entry.Behaviors>
+                                <Behaviors:EventToCommandBehavior EventName="TextChanged"
+                                                        Command="{Binding EmailChangedCmd}"/>
+                            </Entry.Behaviors>
+                            <Entry.Style>
+                                <OnPlatform x:TypeArguments="Style">
+                                    <On Platform="iOS, Android" Value="{StaticResource EmailStyle}"/>
+                                </OnPlatform>
+                            </Entry.Style>
                             <Entry.Triggers>
-                                <Trigger TargetType="Entry" Property="Text.Length" Value="0">
-                                    <Setter Property="PlaceholderColor" Value="Red"/>
-                                </Trigger>
-                                <Trigger TargetType="Entry" Property="IsFocused" Value="True">
-                                    <Setter Property="PlaceholderColor" Value="Black"/>
-                                </Trigger>
+                                <DataTrigger TargetType="Entry"
+                                             Binding="{Binding Email.IsInvalid}"
+                                             Value="False">
+                                    <Setter Property="Behaviors:LineColorBehavior.LineColor"
+                                            Value="Red"/>
+                                </DataTrigger>
+                                             
                             </Entry.Triggers>
                         </Entry>
-                            <Editor Placeholder="Tell me about what happend."
-                                AutoSize="TextChanges"/>
+                        <Editor Placeholder="Tell me about what happend."
+                                Text="{Binding Description.Value, Mode=TwoWay}"
+                                AutoSize="TextChanges">
+                            <Editor.Behaviors>
+                                <Behaviors:EventToCommandBehavior EventName="TextChanged"
+                                                        Command="{Binding DescriptionChangedCmd}"/>
+                            </Editor.Behaviors>
+                        </Editor>
                     </StackLayout>
                 </ScrollView>
                 <StackLayout Orientation="Horizontal"
