--- a/Samples/Sentry.Xamarin.Sample/Resources/UnhandledSvg.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Resources/UnhandledSvg.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Sentry.Xamarin.Sample.Resources.UnhandledSvg">
+             x:Class="Sample.Xamarin.Core.Resources.UnhandledSvg">
     <ContentView.Content>
         <!--https://www.svgrepo.com/svg/309848/person-feedback-->
         <Path                  
