--- a/Samples/Sentry.Xamarin.Sample/Views/DiscoPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/DiscoPage.xaml
@@ -1,23 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ContribSentry.Sample.Views.DiscoPage"
+             x:Class="Sample.Xamarin.Core.Views.DiscoPage"
              Title="Disco"
              BackgroundColor="Black">
     <ContentPage.Content>
         <Grid
             RowDefinitions="*">
-            <Image Source="disco_light" IsAnimationPlaying="True" Aspect="Fill"/>
+            <Image Source="disco_light" 
+                   IsAnimationPlaying="True" 
+                   x:Name="DiscoGif"
+                   Aspect="Fill"/>
             <StackLayout Grid.Row="0">
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand"/>
-            <Button Text="Capture Message" Clicked="CaptureMessageClick"/>
             <Button Text="Start/Stop Animation" 
-                    Clicked="CaptureHandledClick"/>
-            <Button Text="Unhandled Exception" 
-                    Clicked="CaptureUnhandledClick"/>
-        </StackLayout>
+                    Clicked="StartStop_Click"/>
+                <Button Text="Capture Hello World!" 
+                    Clicked="HelloWorld_Click"/>
+            </StackLayout>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
