--- a/Samples/Sentry.Xamarin.Sample/Views/Popups/AboutPopupPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/Popups/AboutPopupPage.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
              xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup" 
-             xmlns:popups="clr-namespace:Sentry.Xamarin.Sample.ViewModels.Popups"
-             x:Class="Sentry.Xamarin.Sample.Views.Popups.AboutPopupPage">
+             xmlns:popups="clr-namespace:Sample.Xamarin.Core.ViewModels.Popups"
+             x:Class="Sample.Xamarin.Core.Views.Popups.AboutPopupPage">
     <pages:PopupPage.BindingContext>
         <popups:AboutPagePopupPageViewModel/>
     </pages:PopupPage.BindingContext>
