--- a/Samples/Sentry.Xamarin.Sample/Views/Popups/PaymentPopupPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/Popups/PaymentPopupPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
              xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
-             x:Class="Sentry.Xamarin.Sample.Views.Popups.PaymentPopupPage">
+             x:Class="Sample.Xamarin.Core.Views.Popups.PaymentPopupPage">
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation 
             PositionIn="Bottom"
