--- a/Samples/Sentry.Xamarin.Sample/Views/Popups/UserFeedbackPopupPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/Popups/UserFeedbackPopupPage.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup" 
              xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup" 
-             xmlns:popups="clr-namespace:Sentry.Xamarin.Sample.ViewModels.Popups"
-             xmlns:Behaviors="clr-namespace:Sentry.Xamarin.Sample.Behaviors" xmlns:customcontrols="clr-namespace:Sentry.Xamarin.Sample.CustomControls"
-                 x:Class="Sentry.Xamarin.Sample.Views.Popups.UserFeedbackPopupPage">
+             xmlns:popups="clr-namespace:Sample.Xamarin.Core.ViewModels.Popups"
+             xmlns:Behaviors="clr-namespace:Sample.Xamarin.Core.Behaviors" xmlns:customcontrols="clr-namespace:Sample.Xamarin.Core.CustomControls"
+                 x:Class="Sample.Xamarin.Core.Views.Popups.UserFeedbackPopupPage">
     <pages:PopupPage.BindingContext>
         <popups:UserFeedbackPopupPageViewModel/>
     </pages:PopupPage.BindingContext>
@@ -43,16 +43,27 @@
                 <ScrollView Grid.Row="1"
                              Margin="10,10,10,0"
                              MinimumHeightRequest="400">
-                    <StackLayout >
+                    <StackLayout>
                         <Label Text="Whoops, a buggy bug was spotted!"/>
-                        <Entry Placeholder="Name"/>
+                        <Label>
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span Text="Reference: "/>
+                                    <Span Text="{Binding ErrorShortId}" TextColor="#AAAAAA" FontSize="10"/>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                        <Entry Placeholder="Name"
+                               Text="{Binding Username, Mode=TwoWay}"/>
                         <customcontrols:EntryValidation Placeholder="Email" 
                                Text="{Binding Email, Mode=TwoWay}"
                                Invalid="{Binding EmailInvalid, Mode=TwoWay}"
+                               ErrorMessage="Invalid email."
                                Textchanged="{Binding EmailChangedCmd}"/>
                         <customcontrols:EditorValidation Placeholder="Tell me about what happend."
-                                Text="{Binding Description.Value, Mode=TwoWay}"
-                                Invalid="{Binding Description.IsValid, Mode=TwoWay}"
+                                Text="{Binding Description, Mode=TwoWay}"
+                                Invalid="{Binding DescriptionInvalid, Mode=TwoWay}"
+                                ErrorMessage="Description cannot be empty."
                                 Textchanged="{Binding DescriptionChangedCmd}"/>
                     </StackLayout>
                 </ScrollView>
@@ -60,9 +71,11 @@
                              Grid.Row="2"
                              Margin="10,0,10,10">
                     <Button Text="Cancel"
-                            HorizontalOptions="FillAndExpand"/>
+                            HorizontalOptions="FillAndExpand"
+                            Command="{Binding CancelCmd}"/>
                     <Button Text="Send"
-                            HorizontalOptions="FillAndExpand"/>
+                            HorizontalOptions="FillAndExpand"
+                            Command="{Binding SendFeedbackCmd}"/>
                 </StackLayout>
             </Grid>
         </Frame>
