UWP support + Sample

--- a/Samples/Sentry.Xamarin.Sample/Resources/FeedbackSvg.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Resources/FeedbackSvg.xaml
@@ -4,7 +4,7 @@
              x:Class="Sample.Xamarin.Core.Resources.FeedbackSvg">
   <ContentView.Content>
         <Path                  
-            Fill="Black" 
+            Fill="{AppThemeBinding Dark=White, Light=Black}"
             Aspect="Fill"
             Data="M10.75 14A2.25 2.25 0 0 1 13 16.25v1.502l-.008.108c-.31 2.126-2.22 3.15-5.425 3.15-3.193 0-5.133-1.01-5.552-3.112L2 17.75v-1.5A2.25 2.25 0 0 1 4.25 14h6.5zm0 1.5h-6.5a.75.75 0 0 0-.75.75v1.42c.28 1.2 1.55 1.84 4.067 1.84s3.73-.63 3.933-1.816V16.25a.75.75 0 0 0-.75-.75zM7.5 6a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7zm12.25-4A2.25 2.25 0 0 1 22 4.25v3.5A2.25 2.25 0 0 1 19.75 10h-1.455l-2.167 2.14A1.25 1.25 0 0 1 14 11.253V9.986A2.25 2.25 0 0 1 12 7.75v-3.5A2.25 2.25 0 0 1 14.25 2h5.5zM7.5 7.5a2 2 0 1 0 0 4 2 2 0 1 0 0-4zm12.25-4h-5.5a.75.75 0 0 0-.75.75v3.5a.75.75 0 0 0 .75.75h1.25v2.154L17.68 8.5h2.07a.75.75 0 0 0 .75-.75v-3.5a.75.75 0 0 0-.75-.75z"/>
     </ContentView.Content>
