--- a/Samples/Sentry.Xamarin.Sample/Resources/BrokenSvg.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Resources/BrokenSvg.xaml
@@ -5,7 +5,7 @@
   <ContentView.Content>
         <!--https://www.svgrepo.com/svg/309848/person-feedback-->
         <Path                  
-            Fill="Black" 
+            Fill="{AppThemeBinding Dark=White, Light=Black}" 
             Aspect="Fill"
             Data="M29.954 29.875l-1.242-1.802V6.336a2.37 2.37 0 0 0-2.363-2.364H12.115L9.38 0l-.205.142 1.323 1.92H9.472c-1.3 0-2.364 1.064-2.364 2.365V34.7a2.37 2.37 0 0 0 2.364 2.363h15.604a2.37 2.37 0 0 0 2.364-2.363v-8.036l2.31 3.354.203-.142zM16.05 5.676h4.993c.157 0 .285.128.285.287s-.128.286-.285.286H16.05c-.158 0-.286-.128-.286-.286s.13-.287.286-.287zM27.067 7.72v17.964L14.696 7.72h12.37zm-9.795 28.16a1.18 1.18 0 1 1 0-2.365 1.18 1.18 0 1 1 0 2.365zm8.522-3.194H8.75V5.812h4.328l12.714 18.463v8.413z"/>
     </ContentView.Content>
