* uwp icons. * tablet/desktop ajust on layout. *dark theme fix on popups

--- a/Samples/Sentry.Xamarin.Sample/Views/MainPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/MainPage.xaml
@@ -15,9 +15,11 @@
         </Frame>
         <ScrollView>
             <FlexLayout
+                HorizontalOptions="Center"
+                VerticalOptions="Center"
                 Wrap="Wrap"
-                AlignItems="Start"
-                AlignContent="Start">
+                AlignItems="Center"
+                AlignContent="SpaceBetween">
                 <FlexLayout.Behaviors>
                     <xamanimation:EntranceTransition
 	                    Duration="300"/>
