--- a/Samples/Sentry.Xamarin.Sample/Views/LoginPage.xaml
+++ b/Samples/Sentry.Xamarin.Sample/Views/LoginPage.xaml
@@ -29,7 +29,8 @@
             <Image Source="login_background_top.png"
                    Grid.Row="0"
                    Aspect="AspectFill"
-                   TranslationY="-255">
+                   HeightRequest="{OnIdiom Default=255, TV=10, Watch=10}"
+                   TranslationY="{OnIdiom Default=-255, TV=-255, Watch=-10}">
                 <Image.Behaviors>
                     <xamanimation:BeginAnimationBehavior
                         Animation="{StaticResource TranslateBackground}"/>
@@ -38,30 +39,32 @@
             <Image Source="login_background_logo.png"
                    Grid.Row="0"
                    Opacity="0">
-                <Image.Behaviors>   
-                <xamanimation:BeginAnimationBehavior                        
+                <Image.Behaviors>
+                    <xamanimation:BeginAnimationBehavior                        
                         Animation="{StaticResource LogoAppearaing}"/>
                 </Image.Behaviors>
             </Image>
-            <Grid Grid.Row="1"
-                 Margin="30"
-                 VerticalOptions="Center"
-                 RowDefinitions="Auto, Auto, Auto, Auto">
-                <Entry Placeholder="Login"                       
-                       Text="{Binding Login}"
-                       Grid.Row="0"
-                       ReturnType="Next"/>
-                <Entry Placeholder="Password"
-                       Text="{Binding Password}"
-                       IsPassword="True"
-                       Grid.Row="1"/>
-                <Button Text="Login"
-                        Margin="0,10,0,0"                        
-                        Command="{Binding LoginCmd}"
-                        Grid.Row="2"/>
-                <Label Text="Tip: Login and password are 1234"
-                       Grid.Row="3"/>
-            </Grid>
+            <ScrollView Grid.Row="1">
+                <Grid Margin="30"
+                     VerticalOptions="Center"
+                     RowDefinitions="Auto, Auto, Auto, Auto">
+                    <Entry Placeholder="Login"                       
+                           Text="{Binding Login}"
+                           Grid.Row="0"
+                           ReturnType="Next"/>
+                    <Entry Placeholder="Password"
+                           Text="{Binding Password}"
+                           IsPassword="True"
+                           Grid.Row="1"/>
+                    <Button Text="Login"
+                            Margin="0,10,0,0"                        
+                            Command="{Binding LoginCmd}"
+                            Grid.Row="2"/>
+                    <Label Text="Tip: Login and password are 1234"
+                           Grid.Row="3"
+                           Margin="0,0,0,30"/>
+                </Grid>
+            </ScrollView>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
