--- a/Tests/Sentry.Xamarin.Forms.UWP.Tests/UnitTestApp.xaml
+++ b/Tests/Sentry.Xamarin.Forms.UWP.Tests/UnitTestApp.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="Sentry.Xamarin.Forms.Tests.UWP.App"
+    x:Class="Sentry.Xamarin.Forms.UWP.Tests.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Sentry.Xamarin.Forms.Tests.UWP">
+    xmlns:local="using:Sentry.Xamarin.Forms.UWP.Tests">
 
 </Application>
